@@ -1,3 +1,7 @@
+2016-10-19  Bernd Edlinger  <bernd.edlinger@hotmail.de>
+
+	* c-c++-common/Wint-in-bool-context-2.c: New test.
+
 2016-10-19  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	* gfortran.dg/dtio_17.f90: Fix test.
